# AndroidEncrypt

./: README.md
app/: build.gradle
app/src/main/java/com/hqumath/androidnative/: MainActivity.java
app/src/main/java/org/freedesktop/liantian/: Liantian.java
app/src/main/jni_secret/: CMakeLists.txt  README.md  SignUtil.cpp  SignUtil.h  Util.cpp  Util.h  main.cpp  my_aes.cpp  my_aes.h  my_base64.cpp  my_base64.h  my_sha.cpp  my_sha.h
app/src/main/res/layout/: activity_main.xml
